# shed-desktop

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.linux  Dockerfile.tauri-linux  Makefile  Package.resolved  Package.swift  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.claude/skills/shedtest-linux/: SKILL.md
.claude/skills/shedtest-mac/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml  sanity-check-app.yml  temp-export-sparkle-key.yml
.shed/: provision.yaml
.shed/scripts/: install.sh
Resources/: AppIcon.icns  Info.plist.template  ShedDesktop.entitlements
Sources/ShedDesktopApp/: AppModel.swift  IPCHandlerImpl.swift  LoginItem.swift  MenuPanel.swift  PreferencesStore.swift  ShedDesktopApp.swift  SystemNotificationPresenter.swift
Sources/ShedDesktopUI/: ActivityView.swift  AgentLaunchSheet.swift  AgentsView.swift  AppState.swift  ApprovalsView.swift  CreateShedSheet.swift  DashboardView.swift  EgressProfilesView.swift  EgressView.swift  MenuBarContentView.swift  Preferences.swift  PreferencesView.swift  ShedListView.swift  SheetComponents.swift  SidebarView.swift  SystemView.swift  Theme.swift
Sources/ShedKit/: ColorHex.swift  ConfigWatcher.swift  LaunchClassifier.swift  SSHOptions.swift  Shell.swift
Sources/ShedKit/Approval/: ApprovalMode.swift  ApprovalModels.swift  AuditStore.swift  HostAgentClient.swift  HostAgentProtocol.swift  NotificationPresenter.swift  PolicyEngine.swift  TouchID.swift
Sources/ShedKit/Backend/: BundleProfile.swift  Screenshot.swift  ShedBackend.swift  UiBridge.swift
Sources/ShedKit/Diagnostics/: DiagnosticLog.swift
Sources/ShedKit/IPC/: IPCMessages.swift  IPCServer.swift  UnixSocket.swift
Sources/ShedKit/Models/: DateFormatting.swift  Models.swift  ShedConfig.swift
Sources/ShedKit/Net/: CertPinning.swift  ControlTokenProvider.swift  HostAgentTokenMinter.swift  RustShedCoreAdapter.swift  SSEClient.swift  ShedServerClient.swift
Sources/ShedKit/RC/: ProcessRunner.swift  RemoteControl.swift
Sources/ShedKit/Terminal/: TerminalLauncher.swift
Sources/shedctl/: main.swift
Tests/ShedKitTests/: ApprovalModelTests.swift  CertPinningTests.swift  ColorHexTests.swift  ConfigParityTests.swift  ControlTokenProviderTests.swift  DashboardPaneTests.swift  DebouncerTests.swift  DiagnosticLogTests.swift  EgressFilterTests.swift  HostAgentClientTests.swift  HostAgentProtocolTests.swift  LaunchClassifierTests.swift  M1Tests.swift  ModelDecodingTests.swift  PolicyEngineTests.swift  RCTests.swift  ResolvedEndpointTests.swift  RustCoreFFISmokeTests.swift  ShedHostProbeTests.swift  ShedServerClientEgressTests.swift  ShedServerClientTokenTests.swift
core/: Cargo.toml  rust-toolchain.toml
core/fixtures/: config_sample.yaml  egress_profiles.json  image_enriched.json  server_info.json  shed_real.json  system_df.json
core/shed-app/: Cargo.toml
core/shed-app/src/: audit_store.rs  backend.rs  coordinator.rs  fakes.rs  host_agent.rs  lib.rs  rc.rs  timefmt.rs  token_minter.rs  traits.rs
core/shed-core/: Cargo.toml
core/shed-core-ffi/: Cargo.toml
core/shed-core-ffi/src/: lib.rs
core/shed-core/src/: config.rs  create.rs  http.rs  lib.rs  models.rs  rc.rs  sse.rs  terminal.rs  tls.rs  token.rs
core/shed-core/src/approval/: mod.rs  models.rs  policy.rs  protocol.rs
core/shed-gtk/: Cargo.toml
core/shed-gtk/src/: app.rs  backend.rs  env.rs  ipc.rs  lib.rs  main.rs  single_instance.rs
core/shedctl/: Cargo.toml
core/shedctl/src/: main.rs
docs/: appcast.xml  enhancements.md  index.md  mockup.html  roadmap.md  spec.md  tauri-b2-agents-test-plan.md  tauri-batch2-test-plan.md  tauri-batch3-test-plan.md
docs/development/: setup.md  test-automation.md
docs/getting-started/: first-run.md  installation.md
docs/reference/: approvals.md  architecture.md  cli.md  configuration.md  ipc.md  rc-sessions.md  rust-core.md
linux/scripts/: build-deb.sh  deb_identify_check.py  validate-deb.sh
packaging/: copyright  nfpm.yaml  shed-desktop.desktop  shed-gtk.desktop
packaging/icon/: generate-icon.swift  regenerate.sh
packaging/polkit/: ai.stridelabs.shed-desktop.policy
plans/: design-parity-kickoff.md  phase-1-rust-core.md  phase-2-next-session.md  phase-2-rust-clients.md  phase-3-enhancements.md  phase-3-next-session.md  phase-4-rust-core-only.md  tauri-design-parity.md  tauri-desktop.md  tauri-linux-release.md  tauri-phase-a.md  tauri-phase-b.md  tauri-phase-c.md
scripts/: build-core.sh  bundle.sh  live-verify.sh  make-dmg.sh  notarize.sh  smoke-launch-window.sh  smoke-real-launch.sh  update-appcast.py
scripts/release/: update-version.sh
tauri/: .gitignore
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json  popover.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: approval.rs  env.rs  ipc.rs  lib.rs  main.rs  prefs.rs  screenshot.rs  single_instance.rs  state.rs  termctl.rs  tray.rs
tauri/ui/: index.html  package-lock.json  package.json  popover.html  tailwind.config.js  vite.config.ts
tauri/ui/scripts/: css-audit.mjs
tauri/ui/src/: App.tsx  TrayPopover.tsx  index.css  popover.tsx
tauri/ui/src/lib/: bridge.ts  utils.ts
tools/fake-host-agent/: fake_host_agent.py
tools/screenshot/: smoke.sh
tools/shed/: build-in-shed.sh  shed-test.sh
tools/shedgtktest/: client.py  conftest.py  test_gtk_create.py  test_gtk_dashboard.py  test_gtk_identify.py  test_gtk_lifecycle.py  test_gtk_screenshot.py  ui.py
tools/shedtest/: _marks.py  client.py  conftest.py  m0_ship_gates.py  mockserver.py  test_agents.py  test_approvals.py  test_dashboard.py  test_gtk.py  test_images.py  test_launch.py  test_lifecycle.py  test_preferences.py  test_screenshot.py  test_shared.py  test_smoke.py  test_system.py  test_tauri.py  ui.py
tools/shedtest/fixtures/: config.yaml
