[project]
name = "shed-desktop-tools"
version = "0.1.0"
description = "Docs + functional test harness for the shed-desktop macOS app"
requires-python = ">=3.12"

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "pymdown-extensions>=10.15",
]
test = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tools/shedtest"]
addopts = "-ra"
