# shed-core Rust workspace — the shared shed-server protocol client + wire DTOs.
# Conventions mirror ../roost (workspace, lints, release profile). Consumed by
# the Swift app via the shed-core-ffi UniFFI wrapper, and (Phase 3) by a GTK app
# linking shed-core directly.
[workspace]
resolver = "2"
members = ["shed-core", "shed-core-ffi", "shed-gtk"]
# The GTK client is a member but NOT a default member: a plain `cargo build` /
# `cargo test` (and `make core-test`) build only shed-core + shed-core-ffi, so
# the macOS dev loop + CI never need GTK installed. Building shed-gtk is opt-in
# (`cargo build -p shed-gtk` / `make gtk-build` / `make gtk-run`), which works on
# Linux and on macOS with Homebrew GTK (`brew install gtk4 libadwaita`).
default-members = ["shed-core", "shed-core-ffi"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
publish = false

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
needless_collect = "warn"
needless_pass_by_value = "warn"

[workspace.dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
futures-util = "0.3"
uniffi = "0.28"
async-trait = "0.1"
# rustls with the ring provider to match reqwest's rustls-tls stack (so cargo
# unifies one provider); used for the leaf-cert pinning verifier.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
httpmock = "0.7"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
