[package]
name = "shed-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "shed-app — the display-free app-logic layer (the shed-core-backed Backend + pull create store) shared by the GTK and Tauri clients (and, later, the Swift app via FFI). No UI or env-prefix coupling; depends only on the pure shed-core protocol crate."

[lib]
name = "shed_app"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
shed-core = { path = "../shed-core" }
tokio = { workspace = true }
serde = { workspace = true }
# Concurrent per-host list_sheds via futures::future::join_all.
futures = "0.3"

[dev-dependencies]
httpmock = { workspace = true }
