[package]
name = "shed-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

# M0 uses only serde/tokio. reqwest/thiserror/futures-util/httpmock land in M2
# when the HTTP client does — they stay in the workspace catalog until then.
[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
