[package]
name = "shed-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rustls = { workspace = true }
sha2 = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
