[package]
name = "shedctl"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "shedctl — a headless CLI driver for the shed-desktop (shed-gtk) JSON IPC socket on Linux. No GTK: a blocking Unix-socket client shipped in the .deb next to shed-desktop (mirrors how roost ships roostctl alongside roost)."

[[bin]]
name = "shedctl"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde_json = { workspace = true }
# getuid() for the /tmp/shed-gtk-<uid> socket fallback — the same primitive
# shed-gtk's env::default_socket_path uses (duplicated to keep shedctl GTK-free).
libc = "0.2"
# base64-decode the screenshot op's `result.png` before writing the PNG to --out
# (the same wire shape shed-gtk's app.screenshot emits).
base64 = "0.22"
