[package]
name = "shedctl"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "shedctl — a headless CLI driver for the shed-desktop JSON IPC socket on Linux. No GUI toolkit: a blocking Unix-socket client shipped in the .deb next to shed-desktop (mirrors how roost ships roostctl alongside roost)."

[[bin]]
name = "shedctl"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde_json = { workspace = true }
# getuid() for the /tmp/shed-tauri-<uid> socket fallback — the same primitive
# the Tauri app's env::default_socket_path uses (duplicated to keep shedctl
# dependency-light).
libc = "0.2"
# base64-decode the screenshot op's `result.png` before writing the PNG to --out
# (the same wire shape shed-gtk's app.screenshot emits).
base64 = "0.22"

[dev-dependencies]
# A throwaway path for the write_png error-path test (no PNG is written on error,
# so the temp dir just supplies a valid target).
tempfile = "3"
