# The Tauri desktop client (Phase A) — a real Linux client toward Mac parity, on
# the shared shed-core. Deliberately its OWN cargo workspace (note the empty
# `[workspace]` table) so WebKitGTK + Tauri deps are NEVER absorbed into ../../core's
# workspace: `make build` / `core-lint --workspace --exclude shed-gtk` stay
# WebKit-free, exactly the isolation shed-gtk gets by being a non-default member.
# shed-core / shed-app are pulled in as plain path deps (that does not make this a
# member of core's workspace). See plans/tauri-phase-a.md.
[package]
name = "shed-desktop-tauri"
version = "0.0.1"
edition = "2021"
publish = false

# Standalone workspace root: stops cargo walking up to adopt (or be adopted by)
# core's workspace. Its Cargo.lock is committed for reproducible CI.
[workspace]

[lib]
name = "shed_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# "tray-icon" backs the menu-bar/tray (B1 — macOS rich popover / Linux native menu).
tauri = { version = "2", features = ["tray-icon"] }
# The shared protocol + app-logic crates (cross-workspace path deps — this links
# them; it does not make this crate a member of core's workspace).
shed-core = { path = "../../core/shed-core" }
shed-app = { path = "../../core/shed-app", features = ["rc"] }
# "process" backs the Linux AuthGate (the pkcheck subprocess; the notifier is zbus).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
libc = "0.2"
# For the prod FailClosedGate's async AuthGate impl (real polkit gate = B6).
async-trait = "0.1"
# Advisory file lock for the single-instance guard (flock, keyed to the socket
# dir — hermetic, unlike an identifier-scoped plugin). Mirrors shed-gtk.
fs2 = "0.4"

# The Linux notifier posts + withdraws approval banners over the session bus
# directly (freedesktop Notifications), so a resolved request's --urgency=critical
# banner (which never auto-expires) is closed precisely — not left lingering.
# Linux-only: the mac build posts via osascript, so zbus never enters the mac dep
# tree. default-features=false + "tokio" routes zbus's I/O through the app's tokio
# runtime instead of spinning up a second (async-io) reactor.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
tempfile = "3"

# A debug build is what the harness drives; keep it reasonably snappy.
[profile.dev]
opt-level = 1
